2010-07-26 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-match-list.c (on_filter_edited):
	Add g_return_if_fail checks on data and context.

	Prevent of inline edition of capabilities.

	* src/nact/nact-match-list.c:
	* src/nact/nact-match-list.h (nact_match_list_create_model):
	Add editable_filter input parameter.

	* src/nact/nact-match-list.c (nact_match_list_on_selection_changed):
	Only enable the column if filter and item are both editable.

	* src/nact/nact-ibasenames-tab.c:
	* src/nact/nact-icapabilities-tab.c:
	* src/nact/nact-ifolders-tab.c:
	* src/nact/nact-imimetypes-tab.c:
	* src/nact/nact-ischemes-tab.c: Updated accordingly.

	Prevent a capability to be inserted twice.

	* src/nact/nact-add-capability-dialog.c (on_button_press_event):
	On double-clic, check for OK sensitivity.

	* src/nact/nact-icapabilities-tab.c (on_add_clicked):
	Provide the dialog with our current content rather than current	capabilities.

	* src/nact/nact-match-list.c:
	* src/nact/nact-match-list.h (nact_match_list_get_rows): New function.

	Fix parameters conversion to v3.

	* src/core/na-object-action.c (icontext_is_candidate):
	Fix comment and minor typo.

	* src/core/na-object-profile.c:
	* src/io-gconf/nagp-reader.c (convert_pre_v3_parameters):
	Move pre-v3 parameters conversion from GConf provider to profile class.

	* src/io-desktop/nadp-reader.c
	(nadp_reader_ifactory_provider_read_start):
	* src/io-gconf/nagp-reader.c (nagp_reader_read_start):
	* src/io-gconf/nagp-gconf-provider.c (ifactory_provider_iface_init):
	* src/io-gconf/nagp-reader.h:
	Now attach profile to its parent in 'read_start' interface.

	* src/io-desktop/nadp-reader.c
	(nadp_reader_ifactory_provider_read_done):
	* src/io-gconf/nagp-reader.c (nagp_reader_read_done):
	Homogeneïze the read_done functions.

	Move the reading of the subitems key for the desktop I/O provider
	from 'read_done' to 'read_start'.

	* src/io-desktop/nadp-reader.c:
	* src/io-desktop/nadp-reader.h